Muda fuso-horário

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
     <head>
         {% include 'components/head.html' %}
-        <meta property="og:description" content="Maior site de notícias para Gamers de verdade." />
-        <meta name="twitter:description" content="Maior site de notícias para Gamers de verdade." />   
+        <meta property="og:description" content="Maior site de notícias para gamers e e-esports" />
+        <meta name="twitter:description" content="Maior site de notícias para gamers e e-esports" />   
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}"> 
     </head>
     <body>
