--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -1,6 +1,15 @@
 <title>{{ title }}</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:ttl" content="600" />
+<meta property="og:site_name" content="mais gamer" />
+<meta property="twitter:site" content="@maisgamernews" />
+<meta property="twitter:card" content="summary" />
+<meta property="twitter:title" content="{{ title }}">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://wwww.maisgamer.com">
+<meta property="og:image:width" content="256">
+<meta property="og:image:height" content="256">
 <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">-->
 <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon_2.png') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
