--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -2,14 +2,10 @@
 <html lang="pt-br">
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/notice.css') }}">
-        <meta property="og:title" content="{{ notice.title }}" />
         <meta property="og:description" content="{{ notice.subtitle }}" />
         <meta property="og:image" content="{{ notice.cover_image }}" />
-        <meta property="og:url" content="">
-        <meta name="twitter:title" content="{{ notice.title }}" />
-        <meta name="twitter:description" content="{{ notice.subtitle }}" />
-        <meta name="twitter:image" content="{{ notice.cover_image }}" />
-        <meta name="twitter:card" content="{{ notice.cover_image }}" />
+        <meta property="twitter:description" content="{{ notice.subtitle }}" />
+        <meta property="twitter:image" content="{{ notice.cover_image }}" />
         {% include 'components/head.html' %}
     </head>
     <body>
