--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/notice.css') }}">
         <meta property="og:description" content="{{ notice.subtitle }}" />
         <meta property="og:image" content="{{ notice.cover_image }}" />
-        <meta property="twitter:description" content="{{ notice.subtitle }}" />
+        <meta property="twitter:description" content="{{ notice.subtitle }}" class="twitter-description"/>
         <meta property="twitter:image" content="{{ notice.cover_image }}" />
         {% include 'components/head.html' %}
     </head>
