--- a/app/templates/notices/notices.html
+++ b/app/templates/notices/notices.html
@@ -36,7 +36,7 @@
                 </div>
                 {% if posts_pages.pages <= 1 %}
                 {% else %}
-                    <button onclick="loadMore()" class="load-more">Carregar mais</button>
+                    <button onclick="loadMore()" class="load-more"><i class="fas fa-caret-down" style="margin-right: 10px;"></i>Mais notícias</button>
                 {% endif %}
                 <span class="final-notices">Fim das notícias</span>
                 <script src="{{ url_for('static', filename='javascript/loadMoreNotices.js') }}"></script>
