--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Belgrano&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=K2D:wght@500&display=swap');
 
 * {
     margin: 0px;
@@ -17,7 +17,7 @@ html, body, .web, .payload {
 }
 
 body, input, button, textarea, select, option, pre {
-    font-family: 'Belgrano', serif;
+    font-family: 'K2D', sans-serif;
     -webkit-transition: all 0.1s linear;
         -moz-transition: all 0.1s linear;
             transition: all 0.1s linear;
