--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
                                     </div>
                                     <div class="notice-description">
                                         <h1 class="title">{{ last_notice.title }}</h1>
-                                        <p class="description">{{ last_notice.subtitle }}</p>
+                                        <h2 class="description">{{ last_notice.subtitle }}</h2>
                                         <p class="addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(last_notice.addedAt) }}</p>
                                     </div>
                                 </span>
@@ -43,7 +43,7 @@
                                                 </div>
                                                 <div class="notice-top-description">
                                                     <h1 class="notice-top-title">{{ notice.title }}</h1>
-                                                    <p class="top-description">{{ notice.subtitle }}</p>
+                                                    <h2 class="top-description">{{ notice.subtitle }}</h2>
                                                     <p class="notice-top-addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</p>
                                                 </div>
                                             </span>
@@ -76,7 +76,7 @@
                                                     </div>
                                                     <div class="notice-description">
                                                         <h1 class="notice-title">{{ notice.title }}</h1>
-                                                        <p class="notice-description">{{ notice.subtitle }}</p>
+                                                        <h2 class="notice-description">{{ notice.subtitle }}</h2>
                                                         <p class="notice-addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</p>
                                                     </div>
                                                 </span>
