--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -66,6 +66,8 @@ a .notice-1 .icon img {
 }
 
 .notice-1 .notice-description .description {
+    font-size: 17px;
+    font-weight: 400;
     color: #3F3F42;
     margin-bottom: 15px;
 }
@@ -131,7 +133,8 @@ a .notice-1 .icon img {
 }
 
 .notice-container-top .notice-top-description .top-description {
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 15px;
     color:#222222;
     margin-bottom: 10px;
 }
@@ -146,7 +149,7 @@ a .notice-1 .icon img {
     border-top: 1px solid #EBE8EC;
     width: 100%;
     height: fit-content;
-    margin-top: 90px;
+    margin-top: 2px;
 }
 
 .all-notices .header-all-notices {
@@ -248,7 +251,8 @@ a .notice-1 .icon img {
 }
 
 .notice-container .notice-description .notice-description {
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 15px;
     color:#222222;
     margin-bottom: 10px;
 }
@@ -314,14 +318,16 @@ a .notice-1 .icon img {
 
     .notice-itens .rest {
         width: 100%;
-        display: block;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
     }
 
     .rest .notice-top-element {
         max-width: 100%;
-        margin-right: 0;
-        margin-bottom: 25px;
-        box-shadow: 0 0 5px  #827189;
+        margin: 0 2.5px;
+        margin-bottom: 5px;
+        box-shadow: 0 0 5px #827189;
         padding-bottom: 10px;
     }
 
@@ -341,17 +347,17 @@ a .notice-1 .icon img {
     }
 
     .notice-container-top .notice-top-description .notice-top-title {
-        font-size: 22px;
+        font-size: 15px;
         margin: 0 10px 5px 10px;
     }
     
     .notice-container-top .notice-top-description .top-description {
-        font-size: 16px;
+        font-size: 12px;
         margin: 0 10px 5px 10px;
     }
     
     .notice-container-top .notice-top-description .notice-top-addedAt {
-        font-size: 13px;
+        font-size: 10px;
         margin: 0 10px 5px 10px;
     }
 
