--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -8,7 +8,7 @@
     justify-content: center;
     width: 60%;
     min-width: 1100px;
-    margin: 35px auto 35px auto;
+    margin: 15px auto 35px auto;
     user-select: none;
 }
 
@@ -78,7 +78,7 @@ a .notice-1 .icon img {
 }
 
 .notice-itens .rest {
-    margin-top: 20px;
+    margin-top: 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -269,9 +269,10 @@ a .notice-1 .icon img {
 
 @media (max-width: 1025px) {
     .payload .notices-body {
-        width: 100%;
+        width: 99%;
         min-width: 0;
         max-width: 700px;
+        margin-top: 5px;
     }
 
     .payload .notices-body .notices-top {
@@ -284,8 +285,7 @@ a .notice-1 .icon img {
 
     .notices-top .notice-itens a .notice-1 {
         display: block;
-        width: 100%;
-        margin-bottom: 25px;
+        width: 98%;
         margin-left: 0px;
         box-shadow: 0 0 5px #827189;
         padding-bottom: 10px;
@@ -403,8 +403,7 @@ a .notice-1 .icon img {
 
     .all-notices .elements .notice-element {
         max-width: 100%;
-        margin-right: 0px;
-        margin-bottom: 25px;
+        margin: 2.5px 2.5px 15px 2.5px;
         height: max-content;
         height: max-content;
         box-shadow: 0 0 5px #827189;
