--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -1,6 +1,17 @@
 <div class="footer">
     <div class="footer-1part">
-
+        <div class="logo-img">
+            <img src="{{ url_for('static', filename='logo.png') }}" alt="" class="logo">
+        </div>
+        <div class="footer-items">
+            <ul>
+                <li class="home-list"><a href="{{ url_for('index') }}" class="home"><i class="fas fa-home" style="margin-right: 10px;"></i>Página inicial</a></li>  
+                <!--<li><a href="{{ url_for('index') }}">Suporte</a></li>
+                <li><a href="{{ url_for('index') }}">Sobre nós</a></li>   
+                <li><a href="{{ url_for('index') }}">Termos de uso</a></li>
+                <li><a href="{{ url_for('index') }}">Política de privacidade</a></li>-->
+            </ul>
+        </div>
     </div>
     <div class="footer-2part">
         <div class="social">
