--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/notice.css') }}">
-        <meta property="og:description" content="{{ notice.subtitle }}" />
+        <meta property="description" content="{{ notice.subtitle }}" />
         <meta property="og:image" content="{{ notice.cover_image }}" />
         <meta property="twitter:description" content="{{ notice.subtitle }}" class="twitter-description"/>
         <meta property="twitter:image" content="{{ notice.cover_image }}" />
