--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -7,7 +7,7 @@
 <meta property="twitter:card" content="summary" />
 <meta property="twitter:title" content="{{ title }}">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://wwww.maisgamer.com">
+<meta property="og:url" content="" class="page-url">
 <meta property="og:image:width" content="256">
 <meta property="og:image:height" content="256">
 <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">-->
@@ -20,3 +20,8 @@
 <script data-ad-client="ca-pub-1284323428666859" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script src="https://kit.fontawesome.com/ed0f511ec4.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+    const pageUrl = location.href;
+    const pageUrlTag = document.querySelector('.page-url');
+    pageUrlTag.content = pageUrl;
+</script>
